<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/fab_margin"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardview_default_elevation"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:text="@string/about_developers"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textSize="40sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:layout_weight="30"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="70"
                        android:layout_marginVertical="5dp"
                        android:src="@mipmap/mikhail" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:text="@string/about_developer1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textSize="30sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:layout_weight="30"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="70"
                        android:layout_marginVertical="@dimen/fab_margin"
                        android:src="@mipmap/lexa" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_marginVertical="5dp"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:text="@string/about_developer2"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textSize="30sp" />
                    />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:layout_marginBottom="@dimen/mtrl_card_spacing"
                android:layout_weight="30"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="70"
                        android:layout_marginVertical="@dimen/fab_margin"
                        android:src="@mipmap/vlad" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:text="@string/about_developer3"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textSize="30sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>